Improvements to overall route page look - Gradient and shadows to searchbar -Fixed route overflow bug -color changes to entire page
Also increased debounce on database calls to help compensate better

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -20,7 +20,7 @@
   left: 0;
   width: 100%;
   height: 10%;
-  background-color: #ffffff;
+  background-color: #e3e3e3;
   display: flex;
   justify-content: space-around; 
   align-items: center; 
@@ -48,6 +48,7 @@
 
 .custom-label {
   font-size: 12px;
+  font-weight: bolder;
   margin: 0; 
   color: #000; 
 }
